@@ -88,6 +88,7 @@
         <toolbarbutton id="EuskalBar-Eurovoc" tooltiptext="&euskalbar.eurovoc.tooltip;" label="Eurovoc" collapsed="false" persist="collapsed" oncommand="euskalbar.dicts.goEuskalBarEurovoc(document.getElementById('EuskalBar-search-string').value);" />
         <toolbarbutton id="EuskalBar-Bergara" tooltiptext="&euskalbar.bergara.tooltip;" label="Bergara" collapsed="false" persist="collapsed" oncommand="euskalbar.dicts.goEuskalBarBergara(document.getElementById('EuskalBar-search-string').value);" />
         <toolbarbutton id="EuskalBar-Ereduzko" tooltiptext="&euskalbar.ereduzko.tooltip;" label="EPG" collapsed="false" persist="collapsed" oncommand="euskalbar.dicts.goEuskalBarEreduzko(document.getElementById('EuskalBar-search-string').value);" />
+        <toolbarbutton id="EuskalBar-Ereduzko" tooltiptext="&euskalbar.egungo.tooltip;" label="EEH" collapsed="false" persist="collapsed" oncommand="euskalbar.dicts.goEuskalBarEgungo(document.getElementById('EuskalBar-search-string').value);" />
         <toolbarbutton id="EuskalBar-Klasikoak" tooltiptext="&euskalbar.klasikoak.tooltip;" label="Klasikoak" collapsed="false" persist="collapsed" oncommand="euskalbar.dicts.goEuskalBarKlasikoak(document.getElementById('EuskalBar-search-string').value);" />
         <toolbarbutton id="EuskalBar-ZTCorpusa" tooltiptext="&euskalbar.ztcorpusa.tooltip;" label="ZT corpusa" collapsed="false" persist="collapsed" oncommand="euskalbar.dicts.goEuskalBarZTCorpusa(document.getElementById('EuskalBar-search-string').value);" />
         <toolbarbutton id="EuskalBar-LB" tooltiptext="&euskalbar.lb.tooltip;" label="LB" collapsed="false" persist="collapsed" oncommand="euskalbar.dicts.goEuskalBarLB(document.getElementById('EuskalBar-search-string').value);" />
@@ -123,6 +124,7 @@
               <menuitem id="Euskalbar-Eurovoc-context" label="Eurovoc" oncommand="euskalbar.dicts.goEuskalBarEurovoc(escape(euskalbar.dicts.selectionText()));" />
               <menuitem id="Euskalbar-Bergara-context" label="Bergara" oncommand="euskalbar.dicts.goEuskalBarBergara(escape(euskalbar.dicts.selectionText()));" />
               <menuitem id="EuskalBar-Ereduzko-context" label="Ereduzko Prosa Gaur" oncommand="euskalbar.dicts.goEuskalBarEreduzko(escape(euskalbar.dicts.selectionText()));" />
+              <menuitem id="EuskalBar-Egungo-context" label="Egungo Euskararen Hiztegia" oncommand="euskalbar.dicts.goEuskalBarEgungo(escape(euskalbar.dicts.selectionText()));" />
               <menuitem id="Euskalbar-Klasikoak-context" label="Klasikoak" oncommand="euskalbar.dicts.goEuskalBarKlasikoak(escape(euskalbar.dicts.selectionText()));"/>
               <menuitem id="Euskalbar-ZTCorpusa-context" label="ZT corpusa" oncommand="euskalbar.dicts.goEuskalBarZTCorpusa(escape(euskalbar.dicts.selectionText()));" />
               <menuitem id="Euskalbar-LB-context" label="Lexikoaren Behatokia" oncommand="euskalbar.dicts.goEuskalBarLB(escape(euskalbar.dicts.selectionText()));" />
