@@ -27,6 +27,7 @@
 <!ENTITY euskalbar.intza.tooltip "Intza慣用句">
 <!ENTITY euskalbar.klasikoak.tooltip "Klasikoen gordailua（古典の保管所）">
 <!ENTITY euskalbar.ereduzko.tooltip "Ereduzko prosa（典型散文）">
+<!ENTITY euskalbar.egungo.tooltip "Egungo euskararen hiztegia">
 <!ENTITY euskalbar.ztcorpusa.tooltip "ZT Corpusa（科学技術集成）">
 <!ENTITY euskalbar.lb.tooltip "Lexikoaren Behatokiaren Corpusa">
 <!ENTITY euskalbar.consumer.tooltip "Consumer Corpusa">
