@@ -37,6 +37,7 @@ pref("extensions.euskalbar.intza.visible", true);
 pref("extensions.euskalbar.eurovoc.visible", true);
 pref("extensions.euskalbar.bergara.visible", true);
 pref("extensions.euskalbar.ereduzko.visible", true);
+pref("extensions.euskalbar.egungo.visible", true);
 pref("extensions.euskalbar.klasikoak.visible", true);
 pref("extensions.euskalbar.ztcorpusa.visible", true);
 pref("extensions.euskalbar.lb.visible", true);
@@ -69,6 +70,7 @@ pref("extensions.euskalbar.intza.onkey", false);
 pref("extensions.euskalbar.eurovoc.onkey", false);
 pref("extensions.euskalbar.bergara.onkey", false);
 pref("extensions.euskalbar.ereduzko.onkey", false);
+pref("extensions.euskalbar.egungo.onkey", false);
 pref("extensions.euskalbar.klasikoak.onkey", false);
 pref("extensions.euskalbar.ztcorpusa.onkey", false);
 pref("extensions.euskalbar.lb.onkey", false);
