@@ -4,6 +4,7 @@
 
 3.12 bertsioa
 ================
+- Egungo euskararen hiztegia barran sartu da. (#66)
 - Lur hiztegi entziklopedikoa eta Lur entziklopedia tematikoa barran sartu dira. (#129)
 - Hobespen berria: kurtsorearen fokua kutxan utzi edo leihora eraman.  (#131)
 - Hobespenen "Kontsulta aurreratua" fitxa aldatu da. (#138)
